Bug 1708123 choose the better message on lack of MIME type support in MediaRecorder constructor r=jib

Differential Revision: https://phabricator.services.mozilla.com/D113916